src/objects/ACED_Asset_Actual__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Attribute_Upsert__c</fullName>
        <description>Used to upsert the collated results from delivery actuals. Format is AssetId+&apos;-&apos;+Year+&apos;-&apos;+Month</description>
        <externalId>true</externalId>
        <label>Asset Attribute Upsert</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>ACED_Asset__c</referenceTo>
        <relationshipLabel>Asset Actuals</relationshipLabel>
        <relationshipName>Asset_Actuals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <formula>Asset__r.Channel__r.Actual_Attribute__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Asset Actual</label>
    <nameField>
        <displayFormat>AA-{0000}</displayFormat>
        <label>Asset Actual Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>